--- a/Pluralsigh/Mark Heath/Microsoft Azure Developer Create Serverless Functions/SBAzureFunction/TodoAzureFunctionApp/TodoAzureFunctionApp/TodoAzureFunctionApp.csproj
+++ b/Pluralsigh/Mark Heath/Microsoft Azure Developer Create Serverless Functions/SBAzureFunction/TodoAzureFunctionApp/TodoAzureFunctionApp/TodoAzureFunctionApp.csproj
@@ -4,7 +4,9 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.1.2" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Tables" Version="1.1.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
