--- a/Pluralsigh/Mark Heath/Microsoft Azure Developer Create Serverless Functions/SBAzureFunction/TodoAzureFunctionApp/TodoAzureFunctionApp/TodoAzureFunctionApp.csproj
+++ b/Pluralsigh/Mark Heath/Microsoft Azure Developer Create Serverless Functions/SBAzureFunction/TodoAzureFunctionApp/TodoAzureFunctionApp/TodoAzureFunctionApp.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.1.2" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Tables" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
