--- a/Udemy/Memi Lavi/Project/inventory/.vscode/settings.json
+++ b/Udemy/Memi Lavi/Project/inventory/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "appService.preDeployTask": "publish-release",
-    "appService.deploySubpath": "bin\\Release\\net6.0\\publish",
-    "appService.defaultWebAppToDeploy": "/subscriptions/5bbe28da-a2c1-4445-b606-a643c4ead39e/resourceGroups/azure-course-rg/providers/Microsoft.Web/sites/azcourseinventory2"
+    "appService.deploySubpath": "publish",
+    "appService.defaultWebAppToDeploy": "/subscriptions/5bbe28da-a2c1-4445-b606-a643c4ead39e/resourceGroups/azure-course-rg/providers/Microsoft.Web/sites/azcourseinventory2",
+    "dotnet.defaultSolution": "inventory.sln"
 }
