--- a/Udemy/Memi Lavi/Project/catalog/appsettings.json
+++ b/Udemy/Memi Lavi/Project/catalog/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BooksDB" : "Server=tcp:sb-readit-dbserver.database.windows.net,1433;Initial Catalog=ReadIT-DB;Persist Security Info=False;User ID=subhasish;Password=pwd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "BooksDB" : "SQl Server Connection String"
   },
   "Redis": {    
     "ConnectionString" : "<Redis connection string: Key @ Connection String ?ssl=true>"
