Using KeyVault in the Catalog App

--- a/Udemy/Memi Lavi/Project/catalog/appsettings.json
+++ b/Udemy/Memi Lavi/Project/catalog/appsettings.json
@@ -7,10 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BooksDB" : "SQl Server Connection String"
-  },
+  
   "Redis": {    
     "ConnectionString" : "<Redis connection string: Key @ Connection String ?ssl=true>"
+  },
+  "KeyVault":{
+    "BaseUrl":"https://readit-sb-kv.vault.azure.net/"
   }
 }
